--- a/src/sass/Navbar.scss
+++ b/src/sass/Navbar.scss
@@ -21,6 +21,9 @@
                 margin: 0;
                 color: #999;
             }
+            .active{
+                color:#fb9756;
+            }
         }
     }
 }
