--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,7 +1,7 @@
 /*(1)清除默认样式*/
-html, body{
+/* html, body{
     font-size: 62.5%;
-}
+} */
 html, body, ul, li, ol, dl, dd, dt, p, h1, h2, h3, h4, h5, h6, form, fieldset, legend, img,input{ margin:0; padding:0; }
 fieldset, img,input,button { border:0 none; padding:0;margin:0;outline-style:none; }   /*去掉input等聚焦时的蓝色边框*/
 ul,li,ol{ list-style:none; }
