--- a/src/sass/Navbar.scss
+++ b/src/sass/Navbar.scss
@@ -1,10 +1,12 @@
 .App{
     display:flex;flex-direction:column;justify-content:center;
+    position: relative;
+    height: 100%;
     // align-items:center;
 }
 .navbar{
-    width: 100%;
-    position: fixed;bottom: 0;left: 0;right: 0;background: #FFFFFF;z-index: 9999;text-align: center;   padding-top: 5px;border-top: 1px solid #d9d9d9;
+    width: 100%;padding-bottom: .08rem;
+    position: fixed;bottom: 0;left: 0;right: 0;background: #FFFFFF;z-index: 9999;text-align: center;   padding-top: .1rem;border-top: .02rem solid #d9d9d9;
     ul{
         display:flex;
         justify-content:center;
@@ -17,7 +19,11 @@
             justify-content:center;
             align-items:center;
             text-align: -webkit-match-parent;
+            img{
+                width: .48rem;
+            }
             p{
+                font-size: .186667rem;
                 margin: 0;
                 color: #999;
             }
