--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  text-align: center;
+  overflow: hidden;
+  height: 100%;
 }
 
-.App-logo {
+/* .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 40vmin;
 }
@@ -29,4 +30,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
