--- a/src/sass/ContainSwiper.scss
+++ b/src/sass/ContainSwiper.scss
@@ -25,7 +25,7 @@
             a{
                 display: block;
                 .slide_imgbox{
-                    height: 2.4rem;
+                    // height: 2.4rem;
                     background-position: center;
                     background-repeat: no-repeat;
                     background-size: 100% auto;
@@ -33,6 +33,12 @@
                         height: 2.04rem;
                         vertical-align: bottom;
                     }
+                }
+                .morebox{
+                    margin-top: .24rem;
+                    border: .02rem solid #eee;
+                    padding-top: .48rem;
+                    height: .64rem;
                 }
                 .slide_inner{
                     word-break: break-all;
@@ -46,6 +52,7 @@
                     font-size: .24rem;
                     color: #2C2C2C;
                     position:relative;
+                    margin-top: 0.46rem;
                     &::after {
                         content:"...";
                         font-weight:bold;
@@ -58,6 +65,7 @@
                 p{
                     font-size: .24rem;
                     color: #cc3333;
+                    text-align: center;
                 }
             }
         }
