--- a/src/sass/Contain.scss
+++ b/src/sass/Contain.scss
@@ -1,5 +1,6 @@
 .content_box{
     border-top: .14rem solid rgba(0,0,0,0.1);
+    
     .textCenter{
         height: .72rem;
         line-height: .72rem;
@@ -33,6 +34,7 @@
 .contentBox{
     overflow: auto;
     height: 12.2rem;
+    margin-top: 1.7rem;
     .contentList{
         margin-bottom: 1.7rem
     }
