--- a/src/sass/category/search.scss
+++ b/src/sass/category/search.scss
@@ -39,7 +39,7 @@
                 padding: .06rem 0;
                 font-size: .32rem;
                 line-height: .24rem;
-                color: #DEDEDE;
+                color: #707070;
                 vertical-align: top;
                 border: none 0;
                 overflow: hidden;
