--- a/src/sass/category/category.scss
+++ b/src/sass/category/category.scss
@@ -69,9 +69,9 @@ header{
         width: 80%; 
         .categoty_right_top{
             margin: .35rem;
-            height: 5.16rem;
+            // height: 5.16rem;
             background-color: #ddd;
-            height: 1.76rem;
+            min-height: 1.76rem;
             img{
                 min-height: 1.76rem;
                 width: 100%;
